--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                     
                     <!-- box -->
                     <section class="color-shape reference">
-                        <a href="http://vefy21.dothome.co.kr/pages/main.php" target="_blank">
+                        <a href="http://vefy21.dothome.co.kr/" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">PROJECT</span>
