--- a/refer-effect/parallaxEffext/index.html
+++ b/refer-effect/parallaxEffext/index.html
@@ -42,7 +42,7 @@
             <li><a href="javascriptPE07.html">7</a></li>
             <li><a href="javascriptPE08.html">8</a></li>
             <li><a href="parallaxV.html">V</a></li>
-            <li><a href="parallaxVH.html">VH</a></li>
+            <li><a href="parallaxVD.html">VD</a></li>
         </ul>
         <ul>
             <li><a href="jqueryPE01.html">1</a></li>
@@ -53,6 +53,7 @@
             <li><a href="jqueryPE06.html">6</a></li>
             <li><a href="jqueryPE07.html">7</a></li>
             <li><a href="jqueryPE08.html">8</a></li>
+            <li><a href="parallaxVH.html">VH</a></li>
             <li><a href="parallaxapple.html">A</a></li>
         </ul>
     </nav>
