--- a/refer-effect/sliderEffect/jquerySE05.html
+++ b/refer-effect/sliderEffect/jquerySE05.html
@@ -12,7 +12,7 @@
     <style>
         /* slider */
         .slider-wrap {
-            height: 100vh;
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
