--- a/refer-effect/parallaxEffext/parallaxapple.html
+++ b/refer-effect/parallaxEffext/parallaxapple.html
@@ -205,6 +205,7 @@
         }
         .s3Text1 span {
             display: inline-block;
+            perspective: 64px;
         }
         .s3Text1 .s1 {
             transform: matrix3d(2,1,-1,1.5,30,-45);
@@ -368,23 +369,23 @@
         <section id="section3">
             <div class="s3Text1 fixed">         <!-- scale, skew,  -->
                 <span class="s1"           
-                    data-26000="transform: scale(2) translateY(5px); opacity: 0;"
-                    data-27000="transform: scale(1) translateY(0px); opacity: 1;"
+                    data-26000="transform: rotateX(90deg) scale(5); opacity: 0;"
+                    data-27000="transform: rotateX(0deg) scale(1); opacity: 1;"
                 >s</span><span class="s2"
-                    data-26500="transform: ; opacity: 0;"
-                    data-27500="transform: ; opacity: 1;"
+                    data-26500="transform: rotateX(-90deg) scale(5); opacity: 0;"
+                    data-27500="transform: rotateX(0deg) scale(1); opacity: 1;"
                 >c</span><span class="s3"
-                    data-27000="transform: ; opacity: 0;"
-                    data-28000="transform: ; opacity: 1;"
+                    data-27000="transform: rotateX(90deg) scale(5); opacity: 0;"
+                    data-28000="transform: rotateX(0deg) scale(1); opacity: 1;"
                 >r</span><span class="s4"
-                    data-27500="transform: ; opacity: 0;"
-                    data-28500="transform: ; opacity: 1;"
+                    data-27500="transform: rotateX(-90deg) scale(5); opacity: 0;"
+                    data-28500="transform: rotateX(0deg) scale(1); opacity: 1;"
                 >i</span><span class="s5"
-                    data-28000="transform: ; opacity: 0;"
-                    data-29000="transform: ; opacity: 1;"
+                    data-28000="transform: rotateX(90deg) scale(5); opacity: 0;"
+                    data-29000="transform: rotateX(0deg) scale(1); opacity: 1;"
                 >p</span><span class="s6"
-                    data-28500="transform: ; opacity: 0;"
-                    data-29500="transform: ; opacity: 1;"
+                    data-28500="transform: rotateX(-90deg) scale(5); opacity: 0;"
+                    data-29500="transform: rotateX(0deg) scale(1); opacity: 1;"
                 >t</span>
             </div>
         </section>
