--- a/joodo/main.html
+++ b/joodo/main.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="베피">
-    <meta name="description" content="채식을 위한 정보 공유 사이트입니다.">
-    <meta name="keywords" content="베피, 채식, 그릭요거트, 글루텐, 글루텐프리">
+    <meta name="author" content="KDONG">
+    <meta name="description" content="술에 대한 정보 공유 사이트입니다.">
+    <meta name="keywords" content="소주, 맥주, 칵테일, 안주, 크동">
     <title>JooDo</title>
 
     <!-- style -->
