--- a/joodo/main2.html
+++ b/joodo/main2.html
@@ -33,7 +33,7 @@
             <div class="ham">
                 <span></span>
             </div>
-            <h1><a href="../pages/main.php"><img src="assets/img/logo_whi.png" alt="주도"></a></h1>
+            <h1><a href="main2.html"><img src="assets/img/logo_whi.png" alt="주도"></a></h1>
             <div class="member">
                 <strong class="ir_so">회원 정보 영역</strong>
                 <a href="../login/login.php">로그인</a>
