--- a/joodo/main2.html
+++ b/joodo/main2.html
@@ -218,20 +218,194 @@
                                 <span class="desc">카타르시스</span>
                               </div>
                             </div>
-                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </article>
+    <!-- //article -->
 
     <div id="short__banner">
         <div class="short__banner">
             <p>더이상 맛없고 쓰기만 한 술은 그만!!</p>
         </div>
     </div>
+    <!-- //short__banner -->
 
-    <footer id="footer"></footer>
+    <article id="article2">
+        <div class="container">
+            <div class="row">
+                <div class="recipe__wrap">
+                    <p>레시피를 활용해 맛있게 만들어봐요~</p>
+                    <h2>추천 레시피</h2>
+                    <div class="recipe__box">
+                        <div class="recipe">
+                            <div class="recipe__img">
+                                <img src="assets/img/drink1.png" alt="이미지">
+                            </div>
+                            <div class="recipe__text">
+                                <p class="recipe__desc">Cone Ice Cream</p>
+                                <div class="recipe__stars">
+                                    <span class="icon star1"></span>
+                                    <span class="icon star1"></span>
+                                    <span class="icon star1"></span>
+                                    <span class="icon star2"></span>
+                                    <span class="icon star0"></span>
+                                </div>
+                                <a href="#">View More</a>
+                            </div>
+                        </div>
+                        <div class="recipe">
+                            <div class="recipe__img">
+                                <img src="assets/img/drink2.png" alt="이미지">
+                            </div>
+                            <div class="recipe__text">
+                                <p class="recipe__desc">Cone Ice Cream</p>
+                                <div class="recipe__stars">
+                                    <span class="icon star1"></span>
+                                    <span class="icon star1"></span>
+                                    <span class="icon star1"></span>
+                                    <span class="icon star2"></span>
+                                    <span class="icon star0"></span>
+                                </div>
+                                <a href="#">View More</a>
+                            </div>
+                        </div>
+                        <div class="recipe">
+                            <div class="recipe__img">
+                                <img src="assets/img/drink3.png" alt="이미지">
+                            </div>
+                            <div class="recipe__text">
+                                <p class="recipe__desc">Cone Ice Cream</p>
+                                <div class="recipe__stars">
+                                    <span class="icon star1"></span>
+                                    <span class="icon star1"></span>
+                                    <span class="icon star1"></span>
+                                    <span class="icon star2"></span>
+                                    <span class="icon star0"></span>
+                                </div>
+                                <a href="#">View More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#">레시피 더보기</a>
+                </div>
+            </div>
+        </div>
+    </article>
+    <!-- //article2 -->
+
+    <article id="article3">
+        <div class="container">
+            <div class="row">
+                <div class="gunbae__wrap">
+                    <div class="gunbae__text">
+                        <div class="gunbae__text__box">
+                            <div class="gunbae__slider">
+                                <h3>청.바.지</h3>
+                                <p>청준은 바로 지금</p>
+                            </div>
+                            <div class="gunbae__slider">
+                                <h3>청.바.지</h3>
+                                <p>청준은 바로 지금</p>
+                            </div>
+                            <div class="gunbae__slider">
+                                <h3>청.바.지</h3>
+                                <p>청준은 바로 지금</p>
+                            </div>
+                        </div>
+                        <div class="gunbae-btn">
+                            <a href="#" class="prev">prev</a>
+                            <a href="#" class="next">next</a>
+                        </div>
+                    </div>
+                    <div class="gunbae__img">
+                        <img src="assets/img/history01.jpg" alt="이미지입니다">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
+    <!-- //article3 -->
+
+    <aside id="aside">
+        <div class="container">
+            <div class="row">
+                <div class="swiper mySwiper2">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="assets/img/drink1.png" alt="이미지입니다.">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="assets/img/drink2.png" alt="이미지입니다.">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="assets/img/drink3.png" alt="이미지입니다.">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="assets/img/drink4.png" alt="이미지입니다.">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="assets/img/drink2.png" alt="이미지입니다.">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="assets/img/drink3.png" alt="이미지입니다.">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="assets/img/drink1.png" alt="이미지입니다.">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="assets/img/drink4.png" alt="이미지입니다.">
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </aside>
+    <!-- //black__banner -->
+
+    <!-- footer -->
+    <footer id="footer">
+        <div id="footer_sns">
+            <div class="container">
+                <div class="footer_sns">
+                    <ul>
+                        <li class="icon s1"><a href="#"><span class="ir_pm">트위터</span></a></li>
+                        <li class="icon s2"><a href="#"><span class="ir_pm">페이스북</span></a></li>
+                        <li class="icon s3"><a href="#"><span class="ir_pm">인스타그램</span></a></li>
+                        <li class="icon s4"><a href="#"><span class="ir_pm">구글플레이</span></a></li>
+                        <li class="icon s5"><a href="#"><span class="ir_pm">아이폰 앱스토어</span></a></li>
+                    </ul>
+                    <div class="tel">
+                        <a href="#">ARS <em>010-2732-9233</em></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="footer_info">
+            <div class="container">
+                <div class="row">
+                    <div class="footer_info">
+                        <h2><img src="assets/img/logo_whi.png" alt="로고"></h2>
+                        <ul>
+                            <li><a href="#">회사소개</a></li>
+                            <li><a href="#">채용정보</a></li>
+                            <li><a href="#">제휴/광고/부대사업 문의</a></li>
+                            <li><a href="#">이용약관</a></li>
+                            <li><a href="#">개인정보처리방침</a></li>
+                            <li><a href="#">고객센터</a></li>
+                            <li><a href="#">윤리경영</a></li>
+                        </ul>
+                        <address>
+                            <p>경기도 안산시 중앙동 라인컴퓨터아트학원<br><span class="bar2">대표자명 강동재</span> 개인정보보호 책임자 경영지원실 실장 강동재<br><span class="bar2">사업자등록번호 211-86-59478</span> 통신판매업신고번호 제 833호</p>
+                            <p>Copyright 2021 by KDONG__JOODO Inc. All right reserved</p>
+                        </address>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- //footer -->
 
 
@@ -282,6 +456,16 @@
         var swiper = new Swiper(".mySwiper", {
             slidesPerView: 4,
             spaceBetween: 10,
+            autoplay: {
+                delay: 2500,
+                disableOnInteraction: true,
+            },
+            loop : true, // 슬라이드 반복 여부
+            loopAdditionalSlides : 1 // 슬라이드 반복 시 마지막 슬라이드에서 다음 슬라이드가 보여지지 않는 현상 수정
+        });
+        var swiper2 = new Swiper(".mySwiper2", {
+            slidesPerView: 8,
+            spaceBetween: 20,
             autoplay: {
                 delay: 2500,
                 disableOnInteraction: true,
