--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape reference">
+                    <!-- <section class="color-shape reference">
                         <a href="illustrator/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -825,7 +825,7 @@
                                 </div>
                             </div>
                         </a> 
-                    </section>
+                    </section> -->
                     <!-- //box -->
 
                 </div>
