--- a/illustrator/index.html
+++ b/illustrator/index.html
@@ -105,7 +105,49 @@
 
                 <!-- Intro2 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro2" class="page-header">일러스트06-1</h2>
+                    <h2 id="intro2" class="page-header">일러스트1</h2>
+                    <p class="bs-callout bs-callout-info">아이콘 따라 그리기</p>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/section04-01.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- //Intro2 -->
+
+                <!-- Intro3 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro3" class="page-header">일러스트2</h2>
+                    <p class="bs-callout bs-callout-info">엠블럼 따라 그리기</p>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/section04-02.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- //Intro3 -->
+
+                <!-- Intro4 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro4" class="page-header">일러스트3</h2>
+                    <p class="bs-callout bs-callout-info">패턴그리기</p>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/section04-02.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- //Intro4 -->
+
+                <!-- Intro2 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro2" class="page-header">일러스트2</h2>
                     <p class="bs-callout bs-callout-info">부드러운 그라데이션을 이용한 풍경 일러스트</p>
                     <div class="row">
                         <div class="col-md-12">
@@ -119,7 +161,7 @@
 
                 <!-- Intro3 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro3" class="page-header">일러스트06-2</h2>
+                    <h2 id="intro3" class="page-header">일러스트3</h2>
                     <p class="bs-callout bs-callout-info">그레인 텍스쳐를 이용한 주전자 일러스트</p>
                     <div class="row">
                         <div class="col-md-12">
