--- a/portfolio.html
+++ b/portfolio.html
@@ -1,68 +1,269 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="webstoryboy">
+    <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
+    <meta name="keywords"
+        content="크동, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design, Webstoryboy">
+    <title>크동 | KDONG | RESEARCH</title>
+    
+    <!-- Bootstrap core CSS -->
+    <link href="../assets/css/bootstrap.css" rel="stylesheet">
+    <link href="../assets/css/docs.min.css" rel="stylesheet">
+    <link href="../assets/css/prism.css" rel="stylesheet">
+    <!-- 파비콘 -->
+    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="../assets/ico/favicon_114.png">
+    <link rel="icon" href="../assets/ico/icon.png">
+    <link rel="icon" href="../assets/ico/favicon_57.png" sizes="16x16">
+    <link rel="icon" href="../assets/ico/favicon_72.png" sizes="32x32">
+    <link rel="icon" href="../assets/ico/favicon_114.png" sizes="48x48">
+    <link rel="icon" href="../assets/ico/favicon_114.png" sizes="64x64">
+    <link rel="icon" href="../assets/ico/favicon_114.png" sizes="128x128">
+    <!-- Facebook meta tags -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="크동" />
+    <meta property="og:url" content="https://webstoryboy.co.kr/" />
+    <meta property="og:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
+    <meta property="og:site_name" content="웹스토리보이" />
+    <meta property="og:description" content="웹과 관련된 정보를 제공합니다." />
+    <!-- twitter meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@noyclah_jdk" />
+    <meta name="twitter:title" content="크동" />
+    <meta name="twitter:description" content="웹과 관련된 정보를 제공합니다." />
+    <meta property="twitter:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
+    <!-- 웹 폰트 -->
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gaegu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.../assets2/js/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <style>
-        .container {
-            max-width: 1300px;
-            margin: 0 auto;
-        }
-        h1 {
-            font-size: 50px;
-            text-align: center;
-        }
-        ul {display: flex;}
-        li {list-style: none; padding: 10px 20px;}
-        a {text-decoration: none; font-size: 30px;}
-        .second {
-            margin-top: 100px;
+        .bgs1 {
+            background-image: linear-gradient(-225deg, #A445B2 0%, #D41872 52%, #FF0066 100%);
         }
     </style>
 </head>
+
 <body>
-    <div class="container">
-        <div>
-            <h1>포트폴리오 리서치</h1>
-            <ul>
-                <li><a href="https://camilledarracq.com/">1</a></li>
-                <li><a href="https://www.motleycrowd.live/projects">2</a></li>
-                <li><a href="https://logartis.info/">3</a></li>
-                <li><a href="https://designembraced.com/case/gemmy-woud-binnendijk">4</a></li>
-                <li><a href="https://cannesprlions.com/lionsnews/happenings/">5</a></li>
-                <li><a href="https://www.dystopiancreatives.com/">6</a></li>
-                <li><a href="https://patrickheng.com/">7</a></li>
-                <li><a href="https://louisansa.com/home/coco-creator">8</a></li>
-                <li><a href="https://2019.makemepulse.com/">9</a></li>
-                <li><a href="https://www.yaroflasher.com/#work">10</a></li>
-                <li><a href="https://bruno-simon.com/">11!!</a></li>
-                <li><a href="https://8.redcollar.digital/">12</a></li>
-                <li><a href="https://digitalconference.ru/">13</a></li>
-                <li><a href="https://new-flavors.risekombucha.com/">14</a></li>
-                <li><a href="https://unshift.jp/works#beyondthecity">15</a></li>
-                <li><a href="https://www.deplacemaison.com/">16</a></li>
-                <li><a href="https://moonfarmer.com/">17</a></li>
-            </ul>
+    <a class="sr-only" href="#content">Skip to main content</a>
+    <header class="navbar navbar-inverse navbar-static-top bs-docs-nav" role="banner">
+        <div class="container">
+            <div class="navbar-header">
+                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="../index.html" class="navbar-brand">KDONG &lt;/doc&gt;</a>
+            </div>
+            <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
+                <ul class="nav navbar-nav">
+                    <li><a href="https://kdongnote.tistory.com/">Tistory</a></li>
+                    <li><a href="https://codepen.io/kdong1224">Codepen</a></li>
+                    <li><a href="https://kdong1224.github.io/dothome21/">Github</a></li>
+                    <!-- <li><a href="https://www.figma.com/@874463">Figma</a></li> -->
+                </ul>
+            </nav>
         </div>
-        <div class="second">
-            <h1>포트폴리오 참고</h1>
-            <ul>
-                <li><a href="https://webstoryboy.github.io/portfolio2/portfolio06/index10.html">1</a></li>
-                <li><a href="https://webstoryboy.github.io/portfolio2/portfolio08/port/assets/main/index.html">2</a></li>
-                <li><a href="https://webstoryboy.github.io/portfolio2/portfolio05/index.html">3</a></li>
-                <li><a href="https://webstoryboy.github.io/portfolio2/portfolio21/pages/portfolio.html">4</a></li>
-                <li><a href="https://cannesprlions.com/lionsnews/happenings/">5</a></li>
-                <li><a href="https://webstoryboy.github.io/portfolio2/portfolio25/index.html">6</a></li>
-                <li><a href="https://webstoryboy.github.io/portfolio2/portfolio03/index.html">7</a></li>
-                <li><a href="https://webstoryboy.github.io/portfolio/port6/port05.html">8</a></li>
-                <li><a href="https://jb-js.github.io/portfolio/">9</a></li>
-                <li><a href="http://zaar625.dothome.co.kr/port/index.html">10</a></li>
-                <li><a href="http://guuju1003.dothome.co.kr/port/index1.html">11</a></li>
-                <li><a href="https://webstoryboy.github.io/portfolio/port22/index7.html">12</a></li>
-            </ul>
+    </header>
+    <div class="bs-header bgs1" id="content">
+        <div class="container">
+            <h1>Portfolio Research Reference v1.0 &lt;/doc&gt;</h1>
+            <p><a href="https://kdong1224.github.io/dothome21/" target="_blank">kdong1224.github.io</a></p>
         </div>
     </div>
+    <div class="container bs-docs-container">
+        <div class="row">
+            <div class="col-md-9" role="main">
+                <!-- Intro1 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro1" class="page-header">1</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://camilledarracq.com/">View</a></p>
+                </div>
+                <!-- //Intro1 -->
+
+                <!-- Intro2 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro2" class="page-header">2</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://www.motleycrowd.live/projects">View</a></p>
+                </div>
+                <!-- //Intro2 -->
+
+                <!-- Intro3 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro3" class="page-header">3</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://logartis.info/">View</a></p>
+                </div>
+                <!-- //Intro3 -->
+
+                <!-- Intro4 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro4" class="page-header">4</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://designembraced.com/case/gemmy-woud-binnendijk">View</a></p>
+                </div>
+                <!-- //Intro4 -->
+
+                <!-- Intro5 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro5" class="page-header">5</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://www.dystopiancreatives.com/">View</a></p>
+                </div>
+                <!-- //Intro5 -->
+
+                <!-- Intro6 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro6" class="page-header">6</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://bruno-simon.com/">View</a></p>
+                </div>
+                <!-- //Intro6 -->
+
+                <!-- Intro7 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro7" class="page-header">7</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://8.redcollar.digital/">View</a></p>
+                </div>
+                <!-- //Intro7 -->
+
+                <!-- Intro8 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro8" class="page-header">8</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://patrickheng.com/">View</a></p>
+                </div>
+                <!-- //Intro8 -->
+
+                <!-- Intro9 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro9" class="page-header">9</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://louisansa.com/home/coco-creator">View</a></p>
+                </div>
+                <!-- //Intro9 -->
+
+                <!-- Intro10 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro10" class="page-header">10</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://2019.makemepulse.com/">View</a></p>
+                </div>
+                <!-- //Intro10 -->
+
+                <!-- Intro-test11 -->
+                <div class="bs-docs-section">
+                    <h2 id="Intro-test11" class="page-header">11</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://www.yaroflasher.com/#work">View</a></p>
+                </div>
+                <!-- //Intro-test11 -->
+
+                <!-- Intro12 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro12" class="page-header">12</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://digitalconference.ru/">View</a></p>
+                </div>
+                <!-- //Intro12 -->
+
+                <!-- Intro13 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro13" class="page-header">13</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://new-flavors.risekombucha.com/">View</a></p>
+                </div>
+                <!-- //Intro13 -->
+
+                <!-- Intro14 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro14" class="page-header">14</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://unshift.jp/works#beyondthecity">View</a></p>
+                </div>
+                <!-- //Intro14 -->
+
+                <!-- Intro15 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro15" class="page-header">15</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://www.deplacemaison.com/">View</a></p>
+                </div>
+                <!-- //Intro15 -->
+
+                <!-- Intro16 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro16" class="page-header">16</h2>
+                    <div class="row"></div>
+                    <p>코드 보기 <a href="https://moonfarmer.com/">View</a></p>
+                </div>
+                <!-- //Intro16 -->
+            </div>
+            <!-- //col-md-9 -->
+
+            <!-- //col-md-3 -->
+            <div class="col-md-3">
+                <div class="bs-sidebar hidden-print" role="complementary">
+                    <ul class="nav bs-sidenav">
+                        <li><a href="#intro1">1</a></li>
+                        <li><a href="#intro2">2</a></li>
+                        <li><a href="#intro3">3</a></li>
+                        <li><a href="#intro4">4</a></li>
+                        <li><a href="#intro5">5</a></li>
+                        <li><a href="#intro6">6</a></li>
+                        <li><a href="#intro7">7</a></li>
+                        <li><a href="#intro8">8</a></li>
+                        <li><a href="#intro9">9</a></li>
+                        <li><a href="#intro10">10</a></li>
+                        <li><a href="#intro11">11</a></li>
+                        <li><a href="#intro12">12</a></li>
+                        <li><a href="#intro13">13</a></li>
+                        <li><a href="#intro14">14</a></li>
+                        <li><a href="#intro15">15</a></li>
+                        <li><a href="#intro16">16</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!--//col-md-3 -->
+        </div>
+        <!-- //row -->
+    </div>
+    <!-- //container -->
+    <!-- Footer -->
+    <footer class="bs-footer" role="contentinfo">
+        <div class="container">
+            <ul class="footer-links muted">
+                <li>Currently v2.0</li>
+                <li>&middot;</li>
+                <li><a href="https://webstoryboy.github.io/w9/html/">webstoryboy</a></li>
+                <li>&middot;</li>
+                <li><a href="http://cafe.naver.com/crossbrowsing" target="_blank">publisher cafe</a></li>
+                <li>&middot;</li>
+                <li><a href="http://cafe.daum.net/flairdesignlink" target="_blank">designer cafe</a></li>
+            </ul>
+        </div>
+    </footer>
+    <!-- //Footer -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="../assets/js/jquery-1.9.1.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/docs.min.js"></script>
+    <script src="../assets/js/prism.js"></script>
 </body>
+
 </html>
