--- a/illustrator/index.html
+++ b/illustrator/index.html
@@ -138,16 +138,45 @@
                     <div class="row">
                         <div class="col-md-12">
                             <a href="#" class="thumbnail">
-                                <img src="img/section04-02.jpg" alt="레이아웃">
+                                <img src="img/section04-03-1.jpg" alt="레이아웃">
+                            </a>
+                            <a href="#" class="thumbnail">
+                                <img src="img/section04-03-2.jpg" alt="레이아웃">
+                            </a>
+                            <a href="#" class="thumbnail">
+                                <img src="img/section04-03-3.jpg" alt="레이아웃">
+                            </a>
+                            <a href="#" class="thumbnail">
+                                <img src="img/section04-03-4.jpg" alt="레이아웃">
                             </a>
                         </div>
                     </div>
                 </div>
                 <!-- //Intro4 -->
 
-                <!-- Intro2 -->
+                <!-- Intro5 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro2" class="page-header">일러스트2</h2>
+                    <h2 id="intro5" class="page-header">일러스트4</h2>
+                    <p class="bs-callout bs-callout-info">카페 건물과 사람 그리기</p>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/section05-1.jpg" alt="레이아웃">
+                            </a>
+                            <a href="#" class="thumbnail">
+                                <img src="img/section05-2.jpg" alt="레이아웃">
+                            </a>
+                            <a href="#" class="thumbnail">
+                                <img src="img/section05-3.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- //Intro5 -->
+
+                <!-- Intro6 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro6" class="page-header">일러스트5</h2>
                     <p class="bs-callout bs-callout-info">부드러운 그라데이션을 이용한 풍경 일러스트</p>
                     <div class="row">
                         <div class="col-md-12">
@@ -157,11 +186,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- //Intro2 -->
+                <!-- //Intro6 -->
 
-                <!-- Intro3 -->
+                <!-- Intro7 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro3" class="page-header">일러스트3</h2>
+                    <h2 id="intro7" class="page-header">일러스트6</h2>
                     <p class="bs-callout bs-callout-info">그레인 텍스쳐를 이용한 주전자 일러스트</p>
                     <div class="row">
                         <div class="col-md-12">
@@ -171,11 +200,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- //Intro3 -->
+                <!-- //Intro7 -->
 
-                <!-- Intro4 -->
+                <!-- Intro8 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro4" class="page-header">일러스트06-3</h2>
+                    <h2 id="intro8" class="page-header">일러스트7</h2>
                     <p class="bs-callout bs-callout-info">크레용 브러시를 이용한 마린걸 일러스트</p>
                     <div class="row">
                         <div class="col-md-12">
@@ -185,7 +214,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- //Intro4 -->
+                <!-- //Intro8 -->
 
             </div>
             <!-- //col-md-9 -->
@@ -195,9 +224,13 @@
                 <div class="bs-sidebar hidden-print" role="complementary">
                     <ul class="nav bs-sidenav">
                         <li><a href="#intro1">스타일 캐릭터 그리기</a></li>
-                        <li><a href="#intro2">일러스트06-1</a></li>
-                        <li><a href="#intro3">일러스트06-2</a></li>
-                        <li><a href="#intro4">일러스트06-3</a></li>
+                        <li><a href="#intro2">일러스트1</a></li>
+                        <li><a href="#intro3">일러스트2</a></li>
+                        <li><a href="#intro4">일러스트3</a></li>
+                        <li><a href="#intro5">일러스트4</a></li>
+                        <li><a href="#intro6">일러스트5</a></li>
+                        <li><a href="#intro7">일러스트6</a></li>
+                        <li><a href="#intro8">일러스트7</a></li>
                     </ul>
                 </div>
             </div>
